<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Gamebicon"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/icon"
        android:src="@drawable/logosmallq" />

    <TextView
        android:id="@+id/textAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/auth"
        android:textColor="#000000"
        android:textSize="28sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background"
        android:fontFamily="sans-serif-black"
        android:hint="@string/etLogin"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:typeface="serif" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background"
        android:fontFamily="sans-serif-black"
        android:hint="@string/etReg"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:background="@drawable/background"
        android:backgroundTint="#786060"
        android:text="@string/Enter" />

    <TextView
        android:id="@+id/textAfterAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif"
        android:paddingTop="20dp"
        android:text="@string/textReg"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        android:typeface="sans" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/background"
        android:onClick="clicktoreg"
        android:text="@string/Reg" />


</LinearLayout>
