<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Gamebicon"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/icon"
        android:src="@drawable/logosmallq" />

    <TextView
        android:id="@+id/textAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="36dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/RegHeadline"
        android:textColor="#000000"
        android:textSize="28sp"
        android:typeface="serif" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background"
        android:fontFamily="sans-serif-black"
        android:hint="@string/etLogin"
        android:textColorHint="#757575"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:typeface="serif" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background"
        android:fontFamily="sans-serif-black"
        android:hint="@string/etReg"
        android:textColorHint="#757575"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:typeface="serif" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/background"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nick"
        android:textColor="#988B8B"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/background"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Reg"
        app:iconTint="#130707" />

</LinearLayout>
