<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:backgroundTint="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@color/backgroundLight">

        <ImageView
            android:id="@+id/imageShop"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/nameShop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:text="@string/shop"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageShop"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:text="@string/price"
            android:textColor="#795548"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageShop"
            app:layout_constraintTop_toBottomOf="@+id/nameShop" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:text="@string/itemPrice"
            android:textColor="#795548"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/Price"
            app:layout_constraintTop_toBottomOf="@+id/nameShop" />

        <TextView
            android:id="@+id/available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:text="@string/available"
            android:textColor="#795548"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageShop"
            app:layout_constraintTop_toBottomOf="@+id/Price" />

        <TextView
            android:id="@+id/itemAvailable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:text="@string/itemAvailable"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/available"
            app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

        <TextView
            android:id="@+id/discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:text="@string/discount"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageShop"
            app:layout_constraintTop_toBottomOf="@+id/available" />

        <TextView
            android:id="@+id/itemDiscount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="1"
            android:text="@string/itemDiscount"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/discount"
            app:layout_constraintTop_toBottomOf="@+id/itemAvailable" />

        <Button
            android:id="@+id/buyItem"
            android:layout_width="175dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/background"
            android:paddingVertical="1dp"
            android:text="@string/buyItem"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageShop"
            app:layout_constraintTop_toBottomOf="@+id/discount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>